--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.17.12",
     "concurrently": "^8.2.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
